--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,23 @@
-<footer>
-    
+<footer class="max-container flex flex-col justify-center items-center px-6 absolute bottom-0 left-1/2 transform -translate-x-1/2 ">
+    <section class="max-container max-w-xs flex justify-center items-center">
+        <p class="sm:text-base text-[8px] whitespace-nowrap opacity-75">
+            Empowering Your Day with Precise Weather Insights - © [Year] Weather Pulse. All Rights Reserved.
+        </p>
+    </section>
+    <section class="max-container max-w-xs">
+        <nav class="p-2 opacity-75" aria-label="footer">
+            <ul class="flex flex-row gap-2 justify-center items-center px-10">
+                <li class="sm:text-base text-[9px] whitespace-nowrap hover:opacity-25 cursor-pointer">Terms of Use</li>
+                <div class="border-l-2 rounded-full h-4 border-black opacity-50"></div>
+                <li class="sm:text-base text-[9px] whitespace-nowrap hover:opacity-25 cursor-pointer">Privacy Policy</li>
+                <div class="border-l-2 rounded-full h-4 border-black opacity-50 "></div>
+                <li class="sm:text-base text-[9px] whitespace-nowrap hover:opacity-25 cursor-pointer">Contact Us</li>
+                <div class="border-l-2 rounded-full h-4 border-black opacity-50"></div>
+                <li class="sm:text-base text-[9px] whitespace-nowrap hover:opacity-25 cursor-pointer">Cookie Policy</li>
+            </ul>
+        </nav>
+    </section>
 </footer>
 </body>
+
+</html>
