--- a/views/partials/functions.ejs
+++ b/views/partials/functions.ejs
@@ -28,7 +28,8 @@ function success(position) {
                 sendform();
             }
         }
-        function sendform() {
+        function sendForm() {
+            console.log("Clicked");
             const form = document.getElementById("submit-city-name");
             form.submit();
         }
