--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,17 @@
     <script src="/index.js" defer></script>
     <title>Weather Pulse</title>
 </head>
-<body>    
-<header>
-    <section></section>
-    <section></section>
-</header>
+
+<body class>
+    <header class="padding-x py-8 absolute z-10 w-full">
+        <nav class="flex justify-between items-center max-container relative">
+            <a href="/">
+                <img src="img/logo.png" alt="Logo" />
+            </a>
+            <ul class="flex-1 flex justify-center items-center gap-16 max-lg:hidden">
+                <li>
+                    <a href="#home" class="font-body leading-normal text-lg text-slate-gray hover:text-icons-drk">Home</a>
+                </li> 
+            </ul>
+        </nav>
+    </header>
