--- a/views/location.ejs
+++ b/views/location.ejs
@@ -1,11 +1,8 @@
 <%- include("partials/header.ejs") %>
-<body>
-    <% if(locals.city) {%>
-        <% console.log(city); %>
-    <h1>Welcome to <%= city.name %></h1>
+    <!-- <% if(locals.city) {%>
+    <h1>Welcome to <%= city.name %> City</h1>
     <% } %>
-    <% if(locals.weather) {%>
-        <% console.log(weather); %>
-    <h1>The weather is <%= weather.temp %> Celsius degree </h1>
-    <% } %>
+    <% if(locals.data) {%>
+    <h1>The weather is <%= data.temp %> Celsius degree </h1>
+    <% } %> -->
 </body>
