--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="max-container flex flex-col justify-center items-center px-6 absolute bottom-0 left-1/2 transform -translate-x-1/2 ">
     <section class="max-container max-w-xs flex justify-center items-center">
         <p class="sm:text-base text-[8px] whitespace-nowrap opacity-75">
-            Empowering Your Day with Precise Weather Insights - © [Year] Weather Pulse. All Rights Reserved.
+            Empowering Your Day with Precise Weather Insights -<%= new Date().getFullYear(); %> -  Weather Pulse. All Rights Reserved.
         </p>
     </section>
     <section class="max-container max-w-xs">
