--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,28 +5,147 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <script src="/index.js" defer></script>
+    <script defer src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+        integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
     <title>Weather Pulse</title>
 </head>
-
-<body class="bg-primary-lgt dark:bg-primary-drk text-white">
-    <header class="px-5 py-4 absolute z-10 w-full bg-secondary-drk">
-        <nav class="flex justify-between items-center max-container relative">
-            <% if(locals.city && locals.data) {%>
-            <ul class="flex justify-center items-center gap-1">
-                <li  class="w-6 h-6">
+<script>
+    function toggleMenu() {
+        $("#mobile-menu").toggleClass("hidden");
+        $("#mobile-menu").toggleClass("flex");
+    }
+</script>
+<body class="bg-primary-lgt dark:bg-primary-drk dark:text-white text-black font-semibold ">
+    <header class="px-5 py-4  z-10 dark:bg-secondary-drk bg-secondary-lgt">
+        <section class="max-container">
+            <nav class="flex justify-between items-center relative" aria-label="main">
+                <% if(locals.city && locals.data) {%>
+                <ul class="flex justify-center items-center gap-1">
+                    <li  class="w-6 h-6 flex justify-center items-center">
+                        <a href="/">
+                            <img src="img/logo.png" alt="brand-logo" />
+                        </a>
+                    </li>
+                    <li class="h-8 flex justify-center items-center">
+                        <a href="/" class="font-body leading-normal sm:text-lg text-sm text-slate-gray hover:text-icons-drk"><%=city.name%>, <%=city.name%>, <%= data.current.temp.toFixed(0) %>°</a>
+                    </li>
+                    <li class="flex justify-center items-center">
+                        <img src="https://openweathermap.org/img/wn/<%= data.current.weather[0].icon %>@2x.png" alt="weather-icon" class="w-6 h-6">
+                    </li>
+                </ul>
+                <% }else {%>
+                    <ul class="flex justify-center items-center gap-1">
+                        <li  class="w-6 h-6 flex justify-center items-center">
+                            <a href="/">
+                                <img src="img/logo.png" alt="brand-logo" />
+                            </a>
+                        </li>
+                        <li class="h-8 flex justify-center items-center">
+                            <a href="/" class="font-body leading-normal sm:text-lg text-s text-slate-gray hover:text-icons-drk">London, London 12°</a>
+                        </li>
+                        <li class="w-6 h-8 flex justify-center items-center p-1">
+                            <img src="img/cloud.png" alt="weather-icon" >
+                        </li>
+                    </ul>
+                    <% } %>
+                <button id="hamburger-button" class="relative h-8 w-8 px-4 cursor-pointer text-3xl  flex justify-center items-center" onclick="toggleMenu()">
+                    <div
+                        class="absolute top-4 -mt-0.5 h-[3px] w-8 rounded bg-black dark:bg-white transition-all duration-500 before:absolute before:h-[3px] before:w-6 before:-translate-x-4 before:-translate-y-2 before:rounded before:bg-black before:dark:bg-white before:transition-all before:duration-500 before:content-[''] after:absolute after:h-[3px] after:w-7 after:-translate-x-4 after:translate-y-2 after:rounded after:bg-black after:dark:bg-white after:transition-all after:duration-500 after:content-['']">
+                    </div>
+                </button>
+            </nav>
+        </section>
+        <%# Mobile Menu %>
+        <section id="mobile-menu" class="absolute top-0 left-0 w-screen flex-col items-center pb-8 bg-secondary-lgt dark:bg-secondary-drk hidden ">
+            <article class="p-4 w-full flex justify-between relative" aria-label="mobile">
+                <div class="flex justify-center items-center gap-2">
                     <a href="/">
-                        <img src="img/logo.png" alt="Logo" />
+                        <h1 class="text-black dark:text-white font-title font-semibold sm:text-lg text-sm">Weather Pulse</h1>
                     </a>
-                </li>
-                <li class="h-8">
-                    <a href="/" class="font-body leading-normal sm:text-lg text-xs text-slate-gray hover:text-icons-drk"><%=city.name%>, <%=city.name%>, <%= data.current.temp.toFixed(0) %>°</a>
-                </li>
-                <li class="w-8 h-8">
-                    <img src="https://openweathermap.org/img/wn/<%= data.current.weather[0].icon %>@2x.png" alt="icon">
-                </li>
-            </ul>
-            <% } %>
-
-        </nav>
+                    <a href="/" class="sm:w-10 sm:h-10">
+                        <img src="img/logo.png" alt="brand-logo" class="bg-center w-7 h-7" />
+                    </a>
+                </div>
+                <button id="close-button"
+                    class="relative h-8 w-8 px-4 cursor-pointer text-3xl flex justify-center items-center" onclick="toggleMenu()">
+                    <div
+                        class="before:absolute before:h-[3px] before:w-8 before:-translate-x-4 before:-translate-y-0 before:rounded before:bg-black before:dark:bg-white before:content-[''] before:rotate-45 after:absolute after:h-[3px] after:w-8 after:-translate-x-4 after:translate-y-0 after:rounded after:bg-black after:dark:bg-white after:content-[''] after:-rotate-45">
+                    </div>
+                </button>
+            </article>
+            <hr class="dark:border-primary-drk border-primary-lgt w-screen mb-4">
+            <article class="py-2 flex flex-col gap-4 items-center w-full mb-4">
+                <%# Search bar %>
+                    <form method="post" id="submit-city-name" class="w-5/6 relative">
+                        <button type="reset" class="absolute top-2.5 right-3 cursor-pointer ">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <path fill="currentColor"
+                                    d="m6.4 18.308l-.708-.708l5.6-5.6l-5.6-5.6l.708-.708l5.6 5.6l5.6-5.6l.708.708l-5.6 5.6l5.6 5.6l-.708.708l-5.6-5.6l-5.6 5.6Z" />
+                            </svg>
+                        </button>
+                        <input id="city_input" type="text" name="city_name" placeholder="Search" onkeydown="enter" required
+                            class="py-2.5 px-12 w-full rounded-md  dark:bg-primary-drk bg-primary-lgt">
+                        <button class="absolute left-3 top-2.5  cursor-pointer z-10 " onclick="sendForm">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <path fill="currentColor"
+                                    d="M9.5 4a6.5 6.5 0 0 1 6.5 6.5c0 1.62-.59 3.1-1.57 4.23l5.65 5.65l-.71.71l-5.65-5.65A6.469 6.469 0 0 1 9.5 17A6.5 6.5 0 0 1 3 10.5A6.5 6.5 0 0 1 9.5 4m0 1A5.5 5.5 0 0 0 4 10.5A5.5 5.5 0 0 0 9.5 16a5.5 5.5 0 0 0 5.5-5.5A5.5 5.5 0 0 0 9.5 5Z" />
+                            </svg>
+                        </button>
+                    </form>
+                    <% if(locals.city && locals.data) {%>
+                        <p class="w-5/6 font-body text-2xs font-semibold text-black dark:text-white">
+                            <%= city.name%> , <%= city.name%> <%= data.current.temp.toFixed(0)%>°C
+                        </p>
+                        <% } else{%>
+                            <p class="w-5/6 font-body text-2xs font-semibold text-black dark:text-white">
+                                London, London 12°
+                            </p>
+                            <% } %>
+            </article>
+            <hr class="dark:border-primary-drk border-primary-lgt w-screen mb-4">
+            <article class="px-8 py-4 w-5/6 dark:bg-secondary-drk bg-secondary-lgt shadow-md flex flex-col gap-6" aria-label="options">
+                <figure class="sm:text-lg">
+                    <figcaption> 
+                        <a href="">Today</a>
+                    </figcaption>
+                    <hr class="mt-2 dark:border-primary-drk border-primary-lgt">
+                </figure>
+                <figure class="sm:text-lg"> 
+                    <figcaption> 
+                        <a href="">Hourly</a>
+                    </figcaption>
+                    <hr class="mt-2 dark:border-primary-drk border-primary-lgt">
+                </figure>
+                <figure class="sm:text-lg"> 
+                    <figcaption> 
+                        <a href="">Daily</a>
+                    </figcaption>
+                    <hr class="mt-2 dark:border-primary-drk border-primary-lgt">
+                </figure>
+                <figure class="flex justify-between flex-row items-center"> 
+                    <figcaption> 
+                        <a href="">Language</a>
+                    </figcaption>
+                    <select class="bg-transparent p-2 font-body font-medium sm:text-lg text-xs">
+                        <option value="US" class="bg-primary-drk"> English US</option>
+                        <option value="DE" class="bg-primary-drk"> German</option>
+                        <option value="FR" class="bg-primary-drk"> French</option>
+                        <option value="TR" class="bg-primary-drk"> Turkish</option>
+                        <option value="JA" class="bg-primary-drk"> Japanese</option>
+                    </select>
+                </figure>
+                <hr class="-mt-5 dark:border-primary-drk border-primary-lgt">
+                <figure class="flex justify-between flex-row items-center sm:text-lg "> 
+                    <figcaption> 
+                        <a href="">Units</a>
+                    </figcaption>
+                    <select class="bg-transparent p-2 sm:w-36 w-[105px] sm:text-lg text-xs">
+                        <option value="US" class="bg-primary-drk "> Standard (K)</option>
+                        <option value="DE" class="bg-primary-drk"> Metric (°C, km/h, mm)</option>
+                        <option value="FR" class="bg-primary-drk"> Imperial (°F, Mph, In)</option>
+                    </select>
+                </figure>
+                <hr class="-mt-5 dark:border-primary-drk border-primary-lgt">
+            </article>
+        </section>
     </header>
