--- a/views/location.ejs
+++ b/views/location.ejs
@@ -1,23 +1,16 @@
 <%- include("partials/header.ejs") %>
-    <!-- <% if(locals.city) {%>
-    <h1>Welcome to <%= city.name %> City</h1>
-    <% } %>
-    <% if(locals.data) {%>
-    <h1>The weather is <%= data.temp %> Celsius degree </h1>
-    <% } %> -->
-    <main>
-        <section class=" dark:bg-primary-drk bg-primary-lgt shadow-lg p-2 w-full">
-            <ul class="flex-row flex justify-evenly gap-16">
-                <li class="active-time">
-                    <a href="">Today</a> </li>
-                <li class="">
-                    <a href="">Hourly</a> </li>
-                <li class="">
-                    <a href="">Daily</a> </li>
-            </ul>
-        </section>
-        <section  class="max-container" >
-            <article class="h-64 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
+<% 
+    function addDays(date,days) 
+    {
+        var result=new Date(date); 
+        result.setDate(result.getDate() + days); 
+        result = result.toLocaleDateString([], {day: '2-digit',month:'2-digit'});
+        return result;
+    }
+%>
+    <main class="max-container">
+        <section>
+            <article class="h-60 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
                 <figure class="flex justify-between px-5 py-2 shadow-md text-sm">
                     <figcaption class="font-title">Current Weather</figcaption>
                     <p class="font-numbers font-normal">
@@ -28,27 +21,31 @@
                         <%= am_pm %>
                     </p>
                 </figure>
+                <% if(locals.data) {%>
                 <figure class="flex flex-col justify-center items-center gap-3">
                     <div class="flex items-center justify-center gap-2 ">
-                        <div class="flex items-center justify-center w-24 h-24 py-4 px-2">
-                            <img src="/img/cloud.png" alt="weather-icon" class=" w-full h-full">
+                        <div class="flex items-center justify-center w-24 h-28 py-4 px-2">
+                            <img src="https://openweathermap.org/img/wn/<%= data.current.weather[0].icon %>@2x.png" alt="weather-icon" class=" w-full h-full">
                         </div>
-                        <div>
-                            <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl">12°<span class="text-xl font-title">C</span></p>
-                            <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal">Feels Like <span>9°C</span></p>
+                        <div class="flex flex-col gap-1">
+                            <figcaption>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg"> <%= data.current.weather[0].description.charAt(0).toUpperCase()%><%= data.current.weather[0].description.slice(1)%></p>
+                            </figcaption>
+                            <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl pl-2"><%= data.current.temp.toFixed(0)%>°<span class="text-xl font-title">C</span></p>
+                            <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal">Feels Like <span><%= data.current.feels_like.toFixed(0)%>°C</span></p>
                         </div>
                     </div>
-                    <figcaption>
-                        <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg"> Mostly Sunny</p>
-                    </figcaption>
-                    <button style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg">
-                        More Details
-                    </button>
+                    <form method="post">
+                        <button formaction="/details" type="submit" style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg">
+                            More Details
+                        </button>
+                    </form>
                 </figure>
+                <% } %>
             </article>
-            <article class="h-64 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
+            <article class="h-60 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
                 <figure class="flex justify-between px-5 py-2 shadow-md text-sm">
-                    <figcaption class="font-title">Today’s Weather Forcast</figcaption>
+                    <figcaption class="font-title">Today's Weather Forecast</figcaption>
                     <p class="font-numbers font-normal">
                         <%
                             let date = currentDate.toLocaleDateString([], {day: '2-digit',month:'2-digit'});
@@ -56,73 +53,79 @@
                         <%= date %>
                     </p>
                 </figure>
-                <figure class="flex flex-col justify-center items-center gap-3">
-                    <div class="flex items-center justify-center gap-2 ">
-                        <div class="flex items-center justify-center w-24 h-24 py-4 px-2">
-                            <img src="/img/cloud.png" alt="weather-icon" class=" w-full h-full">
+                <% if(locals.data) {%>
+                    <figure class="flex flex-col justify-center items-center gap-3">
+                        <div class="flex items-center justify-center gap-2 ">
+                            <div class="flex items-center justify-center w-24 h-28 py-4 px-2">
+                                <img src="https://openweathermap.org/img/wn/<%= data.daily[0].weather[0].icon %>@2x.png" alt="weather-icon" class=" w-full h-full">
+                            </div>
+                            <div class="flex flex-col gap-1">
+                                <figcaption>
+                                    <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg"> <%= data.daily[0].weather[0].description.charAt(0).toUpperCase()%><%= data.daily[0].weather[0].description.slice(1)%></p>
+                                </figcaption>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl pl-2"><%= data.daily[0].temp.day.toFixed(0)%>°<span class="text-xl font-title">C</span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal">Feels Like <span><%= data.daily[0].feels_like.day.toFixed(0)%>°C</span></p>
+                            </div>
                         </div>
-                        <div>
-                            <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl">13°<span class="text-xl font-title">C</span></p>
-                            <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal">Feels Like <span>10°C</span></p>
-                        </div>
-                    </div>
-                    <figcaption>
-                        <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg"> Breezy this morning; sunshine</p>
-                    </figcaption>
-                    <button style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg">
-                        More Details
-                    </button>
-                </figure>
+                        <button style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg">
+                            More Details
+                        </button>
+                    </figure>
+                    <% } %>
             </article>
-            <article class="h-64 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
+            <article class="h-60 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
                 <figure class="flex justify-between px-5 py-2 shadow-md text-sm">
-                    <figcaption class="font-title">Tonight’s Weather Forcast</figcaption>
+                    <figcaption class="font-title">Tonight's Weather Forecast</figcaption>
                     <p class="font-numbers font-normal">
                         <%= date %>
                     </p>
                 </figure>
-                <figure class="flex flex-col justify-center items-center gap-3">
-                    <div class="flex items-center justify-center gap-2 ">
-                        <div class="flex items-center justify-center w-24 h-24 py-4 px-2">
-                            <img src="/img/cloud.png" alt="weather-icon" class=" w-full h-full">
+                <% if(locals.data) {%>
+                    <figure class="flex flex-col justify-center items-center gap-3">
+                        <div class="flex items-center justify-center gap-2 ">
+                            <div class="flex items-center justify-center w-24 h-28 py-4 px-2">
+                                <img src="https://openweathermap.org/img/wn/<%= data.hourly[12].weather[0].icon %>@2x.png" alt="weather-icon" class=" w-full h-full">
+                            </div>
+                            <div class="flex flex-col gap-1">
+                                <figcaption>
+                                    <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg"> <%= data.hourly[12].weather[0].description.charAt(0).toUpperCase()%><%= data.hourly[12].weather[0].description.slice(1)%></p>
+                                </figcaption>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl pl-2"><%= data.daily[0].temp.night.toFixed(0)%>°<span class="text-xl font-title">C</span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal">Feels Like <span><%= data.daily[0].feels_like.night.toFixed(0)%>°C</span></p>
+                            </div>
                         </div>
-                        <div>
-                            <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl">6°<span class="text-xl font-title">C</span></p>
-                            <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal">Feels Like <span>6°C</span></p>
-                        </div>
-                    </div>
-                    <figcaption>
-                        <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg"> Cloudy </p>
-                    </figcaption>
-                    <button style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg">
-                        More Details
-                    </button>
-                </figure>
+                        <button style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg">
+                            More Details
+                        </button>
+                    </figure>
+                    <% } %>
             </article>
-            <article class="h-64 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
+            <article class="h-60 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
                 <figure class="flex justify-between px-5 py-2 shadow-md text-sm">
-                    <figcaption class="font-title">Tomorrow’s Weather Forcast</figcaption>
+                    <figcaption class="font-title">Tomorrow's Weather Forecast</figcaption>
                     <p class="font-numbers font-normal">
-                        <%= date %>
+                        <%= addDays(currentDate,1) %>
                     </p>
                 </figure>
-                <figure class="flex flex-col justify-center items-center gap-3">
-                    <div class="flex items-center justify-center gap-2 ">
-                        <div class="flex items-center justify-center w-24 h-24 py-4 px-2">
-                            <img src="/img/cloud.png" alt="weather-icon" class=" w-full h-full">
+                <% if(locals.data) {%>
+                    <figure class="flex flex-col justify-center items-center gap-3">
+                        <div class="flex items-center justify-center gap-2 ">
+                            <div class="flex items-center justify-center w-24 h-28 py-4 px-2">
+                                <img src="https://openweathermap.org/img/wn/<%= data.daily[1].weather[0].icon %>@2x.png" alt="weather-icon" class=" w-full h-full">
+                            </div>
+                            <div class="flex flex-col gap-1">
+                                <figcaption>
+                                    <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg"> <%= data.daily[1].weather[0].description.charAt(0).toUpperCase()%><%= data.daily[1].weather[0].description.slice(1)%></p>
+                                </figcaption>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl  pl-2"><%= data.daily[1].temp.day.toFixed(0)%>°<span class="text-xl font-title">C</span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm  font-body font-normal pl-2">Feels Like <span><%= data.daily[1].feels_like.day.toFixed(0)%>°C</span></p>
+                            </div>
                         </div>
-                        <div>
-                            <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl">6°<span class="text-xl font-title">C</span></p>
-                            <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal">Feels Like <span>9°C</span></p>
-                        </div>
-                    </div>
-                    <figcaption>
-                        <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg"> Periods of Rain</p>
-                    </figcaption>
-                    <button style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg">
-                        More Details
-                    </button>
-                </figure>
+                        <button style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg">
+                            More Details
+                        </button>
+                    </figure>
+                    <% } %>
             </article>
         </section>
     </main>
