Few fixes and details page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
             $("#body").addClass(`bg-[url('${selectBG}')]`);
         }
     </script>
-    <body id="body" class="min-h-screen bg-cover bg-center relative" onload="ChangeBG()">
+    <body id="body" class="min-h-screen bg-cover bg-center relative bg-[url('/img/wp1.jpg')]">
         <header class="px-4 py-4 z-10 w-full bg-transparent absolute">
             <nav class="flex gap-4  justify-start max-container relative mx-auto" aria-label="main">
                 <a href="/">
