--- a/views/location.ejs
+++ b/views/location.ejs
@@ -77,6 +77,10 @@
                 <figure class="flex justify-between px-5 py-2 shadow-md text-sm">
                     <figcaption class="font-title">Tonight's Weather Forecast</figcaption>
                     <p class="font-numbers font-normal">
+                        <% 
+                            let currentHour = currentDate.getHours();
+                            const tonight = 24 - currentHour;
+                        %>
                         <%= date %>
                     </p>
                 </figure>
@@ -84,11 +88,11 @@
                     <figure class="flex flex-col justify-center items-center gap-3">
                         <div class="flex items-center justify-center gap-2 ">
                             <div class="flex items-center justify-center w-24 h-28 py-4 px-2">
-                                <img src="https://openweathermap.org/img/wn/<%= data.hourly[12].weather[0].icon %>@2x.png" alt="weather-icon" class=" w-full h-full">
+                                <img src="https://openweathermap.org/img/wn/<%= data.hourly[tonight].weather[0].icon %>@2x.png" alt="weather-icon" class=" w-full h-full">
                             </div>
                             <div class="flex flex-col gap-1">
                                 <figcaption>
-                                    <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg"> <%= data.hourly[12].weather[0].description.charAt(0).toUpperCase()%><%= data.hourly[12].weather[0].description.slice(1)%></p>
+                                    <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg"> <%= data.hourly[tonight].weather[0].description.charAt(0).toUpperCase()%><%= data.hourly[tonight].weather[0].description.slice(1)%></p>
                                 </figcaption>
                                 <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl pl-2"><%= data.daily[0].temp.night.toFixed(0)%>°<span class="text-xl font-title">C</span></p>
                                 <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal">Feels Like <span><%= data.daily[0].feels_like.night.toFixed(0)%>°C</span></p>
